--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Albert Einstein's Example Publication Page</title>
+    <title>Thomas C Eskridge's Publication Page</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />    
@@ -17,15 +17,15 @@
 
     <div class="row">
       <div class="col-md-4">
-        <img style="width: 100%" src="picture.png"/>
+        <img style="width: 100%" src="picture.jpg"/>
 
-        <h2>Prof. Albert Einstein</h2>
+        <h2>Dr. Thomas C Eskridge</h2>
 
         <br>
 
-        <a href="https://www.ias.edu/">Institute for Advanced Study</a>,<br/>
-        1 Einstein Drive<br/>
-        Princeton, N.J. 08540<br/>
+        <a href="https://www.ias.edu/">Florida Institute of Technology</a>,<br/>
+        150 W. University Blvd<br/>
+        Melbourne, FL 39201<br/>
         U.S.A.<br/>
         <br/>
 
@@ -46,28 +46,15 @@
       <!-- .................................. -->
       
       <div class="col-md-8">
-        Citing <a href="https://en.wikipedia.org/wiki/Albert_Einstein">Wikipedia</a>:
-        <blockquote cite="https://en.wikipedia.org/wiki/Albert_Einstein"
-                    style="max-width: 80%">
-          Albert Einstein (14 March 1879 – 18 April 1955) was a
-          German-born theoretical physicist. He developed the
-          general theory of relativity, one of the two pillars of
-          modern physics (alongside quantum mechanics). Einstein's
-          work is also known for its influence on the philosophy of
-          science. Einstein is best known in popular culture for his
-          mass–energy equivalence formula E = mc<sup>2</sup> (which
-          has been dubbed "the world's most famous equation"). He
-          received the 1921 Nobel Prize in Physics for his "services
-          to theoretical physics", in particular his discovery of
-          the law of the photoelectric effect, a pivotal step in the
-          evolution of quantum theory.
+        <blockquote  style="max-width: 80%">
+Dr. Thomas C Eskridge is an Associate Professor of Information Assurance and Cybersecurity in the Harris Institute for Assured Information at the Florida Institute of Technology.  Dr. Eskridge’s research focuses on amplifying human performance through intelligent assistance and innovative visualizations, both of which require developing a deep understanding of operator goals and mental task models to represent, reason, and visually display.  He is currently developing tools that enable software agents and human operators to collaboratively represent and reason about networks, user actions, and cyber security events. Previous projects include developing a hybrid connectionist-symbolic knowledge  representation system to model human analogical reasoning, case-based reasoning systems supporting milling-machine operators, formal knowledge representation editors, distributed multi-agent systems, fixed-wing and rotary-wing cockpit displays, visualizations for cyber situation awareness, defense posture, and mission management. 
         </blockquote>
 
         <hr>
 
         <h2>Publications</h2>
 
-        <script src="https://bibbase.org/show?bib=https://bibbase.github.io/einstein.bib&jsonp=1"></script>
+        <script src="https://bibbase.org/show?bib=https://github.com/tce/bibbase.github.io/eskridge.bib&jsonp=1"></script>
 
       </div>
     </div>
