--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <p>
           Links:
           <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Albert_Einstein">@Wikipedia</a></li>
-            <li><a href="http://www.nobelprize.org/nobel_prizes/physics/laureates/1921/einstein-facts.html"
-                   >@Nobelprize.org</a></li>
-            <li><a href="https://www.britannica.com/biography/Albert-Einstein">@Britannica.com</a></li>
+            <li><a href="http://www.fit.edu">Florida Tech</a></li>
           </ul>
         </p>
         <div class="spacer">
